apps/common/flux/cloudflared.enc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        app: cloudflared
    name: cloudflared
spec:
    replicas: 3
    selector:
        matchLabels:
            pod: cloudflared
    template:
        metadata:
            labels:
                pod: cloudflared
        spec:
            securityContext:
                sysctls:
                    - name: net.ipv4.ping_group_range
                      value: 65532 65532
            containers:
                - command:
                    - cloudflared
                    - tunnel
                    - --no-autoupdate
                    # In a k8s environment, the metrics server needs to listen outside the pod it runs on.
                    # The address 0.0.0.0:2000 allows any pod in the namespace.
                    - --metrics
                    - 0.0.0.0:2000
                    - run
                    - --token-file
                    - /etc/cloudflared-secrets/token
                  image: cloudflare/cloudflared:latest
                  name: cloudflared
                  volumeMounts:
                    - name: cloudflared-secret-volume
                      mountPath: /etc/cloudflared-secrets
                      readOnly: true
                  livenessProbe:
                    httpGet:
                        # Cloudflared has a /ready endpoint which returns 200 if and only if
                        # it has an active connection to the edge.
                        path: /ready
                        port: 2000
                    failureThreshold: 1
                    initialDelaySeconds: 10
                    periodSeconds: 10
            volumes:
                - name: cloudflared-secret-volume
                  secret:
                    secretName: cloudflared
sops:
    age:
        - enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBEUFZEaGpBakVrNWg2S0FH
[...]
            9mikHV3gMBtOb5e8Y4IY9H6KPo8tq/HpfV85MY2/TrzFZxAxmbCX0w==
            -----END AGE ENCRYPTED FILE-----
          recipient: age1nmyhrpnparuwdkny03zxc52gn488qumxw865ss3vavkqxvauhfwq0e7y34
    encrypted_regex: ^(data|stringData)$
    lastmodified: "2026-07-07T21:20:29Z"
    mac: ENC[AES256_GCM,data:lfCMpgld9IoDXz5GGh7RG7/PwgZSRg0HpZkenzgm6QVpJajLp0SnF28HOEq1WsRWNFMcy8DY+WlpMTNJB0twZ+XH2CDaE0E5EggwDFZK44PvD1V5aozo76bMoAh802ksLDtde7hdTikdH5eaVNF7Ik4Hgan7fjoGB9ixuLiQRgw=,iv:yTLqX/Y+TlFJTebbU94bK7Q6jcdTqKIWfDYF2b1I6JU=,tag:oDCAWs6pWrncwhMWTadMKw==,type:str]
    version: 3.13.2
