apps/common/flux/cloudflared-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cloudflared-egress-restricted
spec:
  endpointSelector:
    matchLabels:
      pod: cloudflared
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
    - toFQDNs:
        - matchPattern: "*.argotunnel.com"
        - matchPattern: "*.v2.argotunnel.com"
      toPorts:
        - ports:
            - port: "7844"
              protocol: TCP
            - port: "7844"
              protocol: UDP
    - toFQDNs:
        - matchName: api.cloudflare.com
        - matchName: sentry.io
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: geometa
            app: frontend
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: geometa
            app: api
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: geometa
            app: docs
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: geometa
            app: image-proxy
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
    - toCIDRSet:
        - cidr: 1.1.1.1/32
      toPorts:
        - ports:
            - port: "853"
              protocol: TCP
