apps/common/flux/image-proxy-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: image-proxy-egress-restricted
spec:
  endpointSelector:
    matchLabels:
      app: image-proxy
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
    - toServices:
        - k8sService:
            serviceName: seaweedfs-s3
            namespace: seaweedfs
      toPorts:
        - ports:
            - port: "8333"
              protocol: TCP
