apps/common/flux/postgres-logical-backup-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: postgres-logical-backup-egress-restricted
spec:
  endpointSelector:
    matchLabels:
      application: spilo-logical-backup
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "6443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: geometa
            application: spilo
            cluster-name: postgres
            team: acid
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - toServices:
        - k8sService:
            serviceName: seaweedfs-s3
            namespace: seaweedfs
      toPorts:
        - ports:
            - port: "8333"
              protocol: TCP
